# StaticSites

./: AGENTS.md  Makefile  README.md  common.mk  generate_manifest.py  new-project.py  pyproject.toml  sites.json
.github/workflows/: ci.yml
fcf-macro-indicators/: .gitignore  Makefile  README.md  pyproject.toml
fcf-macro-indicators/data/: README.md  SAMPLE_DATA.txt  fcf_source.txt  series.csv
fcf-macro-indicators/output/: fcf-macro-indicators.html
fcf-macro-indicators/src/: fetch_data.py  plot_fcf_macro.py
fcf-macro-indicators/tests/: test_edgar.py  test_rebase.py
margin-sp500-m2-visualization/: .gitignore  Makefile  README.md  pyproject.toml
margin-sp500-m2-visualization/data/: series.csv
margin-sp500-m2-visualization/output/: margin-sp500-m2-visualization.html  margin_sp500_m2_2000.html
margin-sp500-m2-visualization/src/: fetch_data.py  plot_macro_series.py
margin-sp500-m2-visualization/tests/: test_rebase.py
ontario-physiotherapy-clinics-map/: .gitignore  Makefile  README.md  build_map.py  clinics.json  fetch_data.py  geocode_cache.json  index.html  pyproject.toml  test_clean_street.py
ontario-physiotherapy-clinics-map/output/: ontario-physiotherapy-clinics-map.html
ontario-physiotherapy-clinics-map/src/: build_map.py  fetch_data.py
ontario-physiotherapy-clinics-map/tests/: test_build_smoke.py  test_clean_street.py
toronto-dinesafe-map/: Makefile  README.md  pyproject.toml
toronto-dinesafe-map/data/: dinesafe.json
toronto-dinesafe-map/output/: toronto-dinesafe-map.html
toronto-dinesafe-map/src/: build_map.py  fetch_data.py
toronto-dinesafe-map/tests/: test_build_smoke.py  test_fetch_reduce.py
toronto-vulnerable-services-map/: Makefile  README.md  Toronto Vulnerable Services Sources.md  build_map.py  fetch_data.py  geocode_cache.json  index.html  pyproject.toml  services.json  shelters.json
toronto-vulnerable-services-map/output/: toronto-vulnerable-services-map.html
toronto-vulnerable-services-map/src/: build_map.py  fetch_data.py
toronto-vulnerable-services-map/tests/: test_build_smoke.py
union-station-transit-isochrone/: .gitignore  Makefile  README.md  build_isochrones.py  build_map.py  fetch_isochrones.py  index.html  isochrones.geojson  pyproject.toml
union-station-transit-isochrone/data/: README.md  transit_model.json
union-station-transit-isochrone/output/: isochrones.geojson  union-station-transit-isochrone.html
union-station-transit-isochrone/src/: build_isochrones.py  build_map.py  fetch_isochrones.py
union-station-transit-isochrone/tests/: conftest.py  test_build_smoke.py  test_dates.py  test_itinerary.py  test_snap.py
