[project]
name = "toronto-dinesafe-map"
version = "0.0.0"
description = "Toronto DineSafe food-safety inspections — one pin per establishment, coloured by its latest outcome (Pass / Conditional Pass / Closed), searchable by name / type / address."
requires-python = ">=3.11"

# Runtime dependencies are only needed by `make data` (the network step); the
# offline `make`/`make test` build is stdlib-only.
dependencies = [
    "requests>=2.31",  # pulls the DineSafe table from Toronto Open Data's CKAN API
    "geopy>=2.4",      # Nominatim client + rate limiter for rows missing coordinates
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
# This project is an environment, not a distributable package -- nothing to build.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.staticsite]
# Homepage-listing metadata, aggregated into the repo-root sites.json by
# ../generate_manifest.py. `title` is the link text; the blurb shown after it is
# [project].description with the leading "<title> — " stripped, so description
# must start with "<title> — ".
title = "Toronto DineSafe food-safety inspections"
