[project]
name = "toronto-vulnerable-services-map"
version = "0.0.0"
description = "Toronto/Ontario services for vulnerable populations: shelters, respite, drop-ins, harm reduction."
requires-python = ">=3.11"

# Only `make data` needs these; building the map from data/ is stdlib-only.
dependencies = [
    "geopy>=2.4",     # Nominatim client + rate limiter
    "requests>=2.31",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
