[project]
name = "toronto-vulnerable-services-map"
version = "0.0.0"
description = "Toronto services for vulnerable populations — shelters, warming & respite centres, drop-ins, harm reduction, housing supports."
requires-python = ">=3.11"

# Only `make data` needs these; building the map from data/ is stdlib-only.
dependencies = [
    "geopy>=2.4",     # Nominatim client + rate limiter
    "requests>=2.31",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.staticsite]
# Homepage-listing metadata, aggregated into the repo-root sites.json by
# ../generate_manifest.py. `title` is the link text; the blurb shown after it is
# [project].description with the leading "<title> — " stripped, so description
# must start with "<title> — ".
title = "Toronto services for vulnerable populations"
